--- a/mater.css
+++ b/mater.css
@@ -47,10 +47,27 @@ body {
   background-color: #f6f6f6;
   border: 2px solid #2196f3;
   margin: 20px auto;
-  display: flex;
-  justify-content: space-between;
   padding: 20px;
   font-size: 24px;
+}
+.game-info .info {
+  display: flex;
+  justify-content: space-between;
+}
+.game-info .timer {
+  display: flex;
+  align-items: center;
+  margin-top: 5px;
+}
+.game-info .timer .timer-bar {
+  background-color: #ddd;
+  margin-left: 15px;
+  width: 100%;
+  height: 15px;
+}
+.game-info .timer .timer-bar span {
+  display: block;
+  background-color: #2196f3;
 }
 .game-blocks {
   width: 1100px;
@@ -97,6 +114,13 @@ body {
   height: 140px;
   margin-top: 30px;
 }
+.leader-board {
+  width: 450px;
+  min-height: 400px;
+  margin: 20px auto;
+  padding: 10px;
+  background-color: transparent;
+}
 .flipped,
 .done {
   transform: rotateY(180deg);
@@ -107,13 +131,13 @@ body {
 }
 .popup {
   position: fixed;
-  top: 10%;
-  left: 0;
+  top: 1%;
+  left: 50%;
+  transform: translateX(-50%);
   height: 200px;
-  width: 100%;
-
-  /* background-color: hsl(207deg 90% 54% / 95%); */
-  background-image: linear-gradient(to right, hsl(207deg 90% 54% / 95%), blue);
+  width: 400px;
+  border-radius: 6px;
+  background-image: linear-gradient(to right bottom, hsl(207deg 90% 54% / 95%), blue);
   color: white;
   font-size: 30px;
   display: flex;
